# electronics_retail_chain

./: .flake8  README.md  pyproject.toml
business/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
business/migrations/: 0001_initial.py
chain_elements/: apps.py
config/: settings.py  urls.py
